Bug 26129. Replace timer with a PLEvent. GTK timers (in this specific case) seem to be confused when a modal event queue has been pushed. By using a PLEvent, we get the same effect, but are able to grab the outermost queue to ensure that our callback to fire OnEndDocumentLoad gets kicked. r=mscott